--- a/templates/category_virtual/index.html.twig
+++ b/templates/category_virtual/index.html.twig
@@ -21,8 +21,8 @@
                 <td>{{ category_virtual.id }}</td>
                 <td>{{ category_virtual.nom }}</td>
                 <td>
-                    {# <a href="{{ path('category_virtual_show', {'id': category_virtual.id}) }}">show</a> #}
-                    <a class="btn btn-primary text-white" href="{{ path('category_virtual_edit', {'id': category_virtual.id}) }}"class="btn btn-primary text-white">Modifier</a>
+                    <a href="{{ path('category_virtual_show', {'id': category_virtual.id}) }}" class="btn btn-primary text-white">Voir</a>
+                    <a class="btn btn-primary text-white" href="{{ path('category_virtual_edit', {'id': category_virtual.id}) }}" class="btn btn-primary text-white">Modifier</a>
                 </td>
             </tr>
         {% else %}
