--- a/templates/menu/index.html.twig
+++ b/templates/menu/index.html.twig
@@ -27,8 +27,8 @@
                 <td>{{ menu.image }}</td>
                 <td>{{ menu.prix }}</td>
                 <td>
-                    <a class="btn btn-primary" href="{{ path('menu_show', {'id': menu.id}) }}">show</a>
-                    <a class="btn btn-primary" href="{{ path('menu_edit', {'id': menu.id}) }}">edit</a>
+                    <a class="btn btn-primary" href="{{ path('menu_show', {'id': menu.id}) }}">Voir</a>
+                    <a class="btn btn-primary" href="{{ path('menu_edit', {'id': menu.id}) }}">Modifier</a>
                 </td>
             </tr>
         {% else %}
