--- a/templates/virtual/index.html.twig
+++ b/templates/virtual/index.html.twig
@@ -23,8 +23,8 @@
                 <td>{{ virtual.nom }}</td>
                 <td>{{ virtual.category.nom }}</td>
                 <td>
-                    <a class="btn btn-primary" href="{{ path('virtual_show', {'id': virtual.id}) }}">show</a>
-                    <a class="btn btn-primary" href="{{ path('virtual_edit', {'id': virtual.id}) }}">edit</a>
+                    <a class="btn btn-primary" href="{{ path('virtual_show', {'id': virtual.id}) }}">Voir</a>
+                    <a class="btn btn-primary" href="{{ path('virtual_edit', {'id': virtual.id}) }}">Modifier</a>
                 </td>
             </tr>
         {% else %}
