--- a/templates/category_virtual/show.html.twig
+++ b/templates/category_virtual/show.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'category_tarif/base.html.twig' %}
 
 {% block title %}CategoryVirtual{% endblock %}
 
@@ -18,9 +18,17 @@
         </tbody>
     </table>
 
-    <a href="{{ path('category_virtual_index') }}">back to list</a>
+    <div class="pl-5">
+        <div class="pb-2 w-75">
+            <a href="{{ path('category_virtual_edit', {'id': category_virtual.id}) }}" class="btn btn-primary">Modifer</a>
+        </div>
+        <div>
+            {{ include('category_virtual/_delete_form.html.twig') }}
+        </div>
+    </div>
+    <hr>
+    <div class="p-3">
+        <a href="{{ path('category_virtual_index') }}" class="btn btn-primary">Retour</a>
+    </div>
 
-    <a href="{{ path('category_virtual_edit', {'id': category_virtual.id}) }}">edit</a>
-
-    {{ include('category_virtual/_delete_form.html.twig') }}
 {% endblock %}
