--- a/templates/virtual/show.html.twig
+++ b/templates/virtual/show.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'category_tarif/base.html.twig' %}
 
 {% block title %}Virtual{% endblock %}
 {% block body %}
@@ -20,13 +20,20 @@
             </div>
 
         </div>
-        <div class="col-12 text-center">
-            <a href="{{ path('virtual_edit', {'id': virtual.id}) }}">edit</a>
+
+    <div class="pl-5">
+        <div class="pb-2 w-75">
+            <a href="{{ path('virtual_edit', {'id': virtual.id}) }}" class="btn btn-primary">Modifer</a>
+        </div>
+        <div>
             {{ include('virtual/_delete_form.html.twig') }}
-            <a href="{{ path('virtual_index') }}">back to list</a>
         </div>
     </div>
-
+    <hr>
+    <div class="p-3">
+        <a href="{{ path('virtual_index') }}" class="btn btn-primary">Retour</a>
+    </div>
+        
 
 
 {% endblock %}
