--- a/templates/home/homepage.html.twig
+++ b/templates/home/homepage.html.twig
@@ -62,7 +62,7 @@
     </div>
     <!-- About -->
     <div class="project-bg bg-primary">
-        <div class="pt-5 pb-5 articles-about">
+        <div class="pb-5 articles-about">
             <article id="about" class="container m-auto pb-1 pt-1 mt-2 mb-2">
                 <h2 class="text-center pt-2 pb-2 mt-2 mb-2 text-light">Qui sommes-nous ?</h2>
                 <p class="text-center text-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
