--- a/templates/restaurant/vueAllCategoryMenu.html.twig
+++ b/templates/restaurant/vueAllCategoryMenu.html.twig
@@ -7,7 +7,7 @@
 
     <div class="header-resto d-flex align-items-center justify-content-center">
         <div class=" mx-auto w-100 bg-title-laser text-center">
-            <h1 class="lasertitle text-white p-3">Jungle Bar</h1>
+            <h1 class="display-4 text-white p-3">Jungle Bar</h1>
             <h3 class="lasersubtitle text-danger"></h3>
             <p class="lasersubtitle h3 text-white p-3 font-weight-light">Gratuit seulement pour Laeti, Nagib, Younes et Eddy</p>
         </div>
