--- a/templates/lasergame/lasergame.html.twig
+++ b/templates/lasergame/lasergame.html.twig
@@ -7,7 +7,7 @@
     <div class="maindiv-laser sdw bg-primary">
         <div class="header-laser d-flex align-items-center justify-content-center">
             <div class=" mx-auto w-100 bg-title-laser text-center">
-                <h1 class="lasertitle text-white p-3">Laser Game Arena</h1>
+                <h1 class="text-white p-3 display-4">Laser Game Arena</h1>
                 <h3 class="lasersubtitle text-danger"></h3>
                 <p class="lasersubtitle h3 text-white p-3 font-weight-light">En famille ou entre amis</p>
             </div>
