--- a/templates/realitevirtuelle/realitevirtuelle.html.twig
+++ b/templates/realitevirtuelle/realitevirtuelle.html.twig
@@ -6,8 +6,8 @@
 <main class="typo-vr">
     <div class="sdw bg-primary">
         <div class="header-vr d-flex align-items-center justify-content-center">
-            <div class=" mx-auto w-100 bg-title-vr">
-                <h1 class="text-white text-center p-3 vrtitle"> Réalité Virtuelle </h1>
+            <div class="mx-auto w-100 bg-title-vr">
+                <h1 class="text-white text-center p-3 display-5"> Réalité Virtuelle </h1>
                 <p class="text-white text-center p-3 vrsubtitle h3 font-weight-light"> Vivre de nouvelles expériences </p>
             </div>
         </div>
