--- a/templates/realitevirtuelle/vueCategoryVirtual.html.twig
+++ b/templates/realitevirtuelle/vueCategoryVirtual.html.twig
@@ -6,7 +6,7 @@
 
     <div class="header-vr d-flex align-items-center justify-content-center">
         <div class=" mx-auto w-100 bg-title-vr">
-            <h1 class="text-white text-center p-3 vrtitle"> Réalité Virtuelle </h1>
+            <h1 class="text-white text-center p-3 display-4"> Réalité Virtuelle </h1>
             <p class="text-white text-center p-3 vrsubtitle h3 font-weight-light"> Vivre de nouvelles expériences </p>
         </div>
     </div>
