--- a/templates/restaurant/restaurant.html.twig
+++ b/templates/restaurant/restaurant.html.twig
@@ -7,7 +7,7 @@
     <div class="maindiv-resto sdw bg-primary">
         <div class="header-resto d-flex align-items-center justify-content-center">
             <div class=" mx-auto w-100 bg-title-laser text-center">
-                <h1 class="lasertitle text-white p-3">Jungle Bar</h1>
+                <h1 class="display-4 text-white p-3">Jungle Bar</h1>
                 <h3 class="lasersubtitle text-danger"></h3>
                 <p class="lasersubtitle h3 text-white p-3 font-weight-light">Gratuit seulement pour Laeti, Nagib, Younes et Eddy</p>
             </div>
@@ -17,13 +17,13 @@
             <div class="bg-primary  pt-5 row">                                                                              
                 <div class="card restocard text-white mb-3 col-9 mx-auto">
                     <div class="card-body col-12 ">
-                        <article class="m-auto col-12 row"> 
+                        <article class="m-auto row"> 
                             <div class="col-sm-10 col-md-10 col-lg-6 col-xl-5 mx-auto my-auto">                         
                                 <img src="{{ asset('img/salle2.png') }}" alt="restaurant" class=" img-fluid rounded border border-primary">
                             </div>
                             
                             <div class="col-sm-10 col-md-10 col-lg-6 col-xl-7 mx-auto">                            
-                                <h4 class="card-title text-center pb-sm-1 pb-md-1 pt-sm-2 pt-md-2">Bienvenue au Jungle Bar</h4>
+                                <h4 class="card-title text-center pt-3">Bienvenue au Jungle Bar</h4>
                                 <hr>
                                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                                     eiusmod tempor
