ShowMenu/VR + Content TEXT RESTAU/LASER/VR

--- a/templates/virtual/show.html.twig
+++ b/templates/virtual/show.html.twig
@@ -2,9 +2,9 @@
 
 {% block title %}Virtual{% endblock %}
 {% block body %}
-    <h1>Jeux VR</h1>
+    {# <h1>Jeux VR</h1> #}
 
-    <div class="container">
+    <div class="container pt-5">
         <div class="row">
             <div class="col-12 text-center">
                 <h3>{{ virtual.nom }}</h3>
@@ -18,7 +18,6 @@
             <div class="col-12">
                 <p> {{ virtual.description }} </p>
             </div>
-
         </div>
 
     <div class="pl-5">
