--- a/templates/lasergame/lasergame.html.twig
+++ b/templates/lasergame/lasergame.html.twig
@@ -25,21 +25,13 @@
                             <div class="col-sm-10 col-md-10 col-lg-6 col-xl-7 mx-auto">                            
                                 <h4 class="card-title text-center pb-sm-1 pb-md-1 pt-sm-2 pt-md-2">Bienvenue au Laser Game Arena</h4>
                                 <hr>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                    eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                                    ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                                    <br>
-                                    <br>
-                                    Duis aute irure dolor in reprehenderit in
-                                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                                    <br>
-                                    <br>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                    eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                                    ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                                <p class="card-text">Qui sera notre nouveau Billy the Kid ou notre Camiliti Janes. Dans une ambiance western, entre le saloon et la banque joue entre amis ou en famille afin de savoir qui est celui qui vise le mieux ou se cache le mieux.
+                                <br>
+                                <br>
+                                Vous qui êtes chef d'entreprise vous chercher le moyen de créer un lien entre vos salarier notre espace de jeux de plus de 300 m², vous permettra à tous de mieux vous apprécier et de mieux vous connaitre.
+                                <br>
+                                <br>
+                                Quand a trouvé une après-midi pour vos chers petits tête brune nous vous proposons nos Happy Birthday, avec gâteaux, boisson et le plus important bonbon.
                                 </p>
                             </div>
                         </article>
