--- a/templates/home/homepage.html.twig
+++ b/templates/home/homepage.html.twig
@@ -27,7 +27,7 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="./img/salle-d-arcade-vr-holocafe-allemagne.jpg" class="d-block w-100"
+                            <img src="./img/Virtual_Reality.jpg" class="d-block w-100"
                                 alt="this website screenshot">
                             <div class="carousel-caption">
                                 <!-- Button trigger modal -->
