--- a/templates/lasergame/vueCategoryTarif.html.twig
+++ b/templates/lasergame/vueCategoryTarif.html.twig
@@ -32,7 +32,7 @@
 
                 <!-- nos tarifs (changer l'id) -->
                 {% elseif tarif.category.id == 1 %}
-                    <div class="col-5 text-center mt-5 mx-auto">
+                    <div class="col-10 col-sm-10 col-md-10 col-lg-5 col-xl-5 text-center mt-5 mx-auto">
                         <div class="card bibo3 text-white sdw{% if loop.first %}{% endif %}">
                             <h3 class="card-header">{{ tarif.nom }}</h3>
                             <div class="card-body">
