--- a/templates/restaurant/vueCategoryMenu.html.twig
+++ b/templates/restaurant/vueCategoryMenu.html.twig
@@ -2,11 +2,11 @@
 {% block title %}Menu Restaurants- Le Complexe{% endblock %}
 
 {% block body %}
-<main class="bg-primary restopage">
+<main class="bg-primary project-bg restopage">
 
     <div class="header-resto d-flex align-items-center justify-content-center">
         <div class=" mx-auto w-100 bg-title-laser text-center">
-            <h1 class="display-4 text-white p-3">Jungle Bar</h1>
+            <h1 class="mt-5 display-4 text-white p-3">Jungle Bar</h1>
             <h3 class="lasersubtitle text-danger"></h3>
             <p class="lasersubtitle h3 text-white p-3 font-weight-light">Gratuit seulement pour Laeti, Nagib, Younes et Eddy</p>
         </div>
@@ -17,7 +17,7 @@
             <h2 class="mt-5 text-center text-white bibo sdw"> {{ category.nom }} </h2>
             <div class="row">
                 {% for menu in menus %}
-                    <div class="col-4 text-center  mt-5 mx-auto sdw">
+                    <div class="col-10 col-sm-10 col-md-10 col-lg-5 col-xl-5 text-center  mt-5 mx-auto sdw">
                         <div class="card text-light titlecatresto mb-3 {% if loop.first %} {% endif %}">
                             <h3 class="card-header">{{ menu.nom }}</h3>
                             <div class="card-body">
