--- a/templates/lasergame/vueAllCategoryTarif.html.twig
+++ b/templates/lasergame/vueAllCategoryTarif.html.twig
@@ -3,10 +3,10 @@
 {% block title %} - Le Complexe{% endblock %}
 
 {% block body %}
-<main class="main-divlaser" id="typo-laser">
+<main class="main-divlaser project-bg" id="typo-laser">
     <div class="header-laser d-flex align-items-center justify-content-center">
         <div class=" mx-auto w-100 bg-title-laser text-center">
-            <h1 class="text-white p-3 display-4">Laser Game Arena</h1>
+            <h1 class="mt-5 text-white p-3 display-4">Laser Game Arena</h1>
             <h3 class="lasersubtitle text-danger"></h3>
             <p class="lasersubtitle h3 text-white p-3 font-weight-light">En famille ou entre amis</p>
         </div>
@@ -17,7 +17,7 @@
             <h2 class="card-header bibo3 sdw my-3 text-center text-white">Choisir une catégorie</h2>
             <div class="row">
                 {% for category in categories %}
-                <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 text-center mt-5 mx-auto divcatlaser">
+                <div class="col-10 col-sm-10 col-md-10 col-lg-5 col-xl-5 text-center mt-5 mx-auto divcatlaser">
                     <div class="card pt-5 mb-3 bg-secondary catlaser">
                         <h3 class="card-header bibo3 sdw text-light">{{ category.nom }}</h3>
                         <div class="card-body d-flex flex-column-reverse mx-auto col-md-4">
