--- a/templates/realitevirtuelle/vueAllCategoryVirtual.html.twig
+++ b/templates/realitevirtuelle/vueAllCategoryVirtual.html.twig
@@ -17,7 +17,7 @@
             <h2 class="card-header titlecatvr sdw my-3 text-center text-white">Choisir une catégorie</h2>
             <div class="row">
                 {% for category in categories %}
-                <div class="col-4 text-center mt-5 mx-auto  divcatlaser">
+                <div class="col-10 col-sm-10 col-md-10 col-lg-5 col-xl-5 text-center mt-5 mx-auto  divcatlaser">
                     <div class="card pt-5 mb-3 bg-secondary  bgImgVirtual" style="--bg:url(../{{ category.image }})">
                         <h3 class="card-header titlecatvr sdw text-light">{{ category.nom }}</h3>
                         <div class="card-body d-flex flex-column-reverse col-md-4 mx-auto">
