--- a/templates/restaurant/vueAllCategoryMenu.html.twig
+++ b/templates/restaurant/vueAllCategoryMenu.html.twig
@@ -3,11 +3,11 @@
 {% block title %} Les menus du restaurant- Le Complexe{% endblock %}
 
 {% block body %}
-<main>
+<main class="project-bg">
 
     <div class="header-resto d-flex align-items-center justify-content-center">
         <div class=" mx-auto w-100 bg-title-laser text-center">
-            <h1 class="display-4 text-white p-3">Jungle Bar</h1>
+            <h1 class="mt-5 display-4 text-white p-3">Jungle Bar</h1>
             <h3 class="lasersubtitle text-danger"></h3>
             <p class="lasersubtitle h3 text-white p-3 font-weight-light">Gratuit seulement pour Laeti, Nagib, Younes et Eddy</p>
         </div>
@@ -18,11 +18,11 @@
             <h2 class="card-header titlecatresto sdw my-3 text-center text-white">Choisir une catégorie</h2>
             <div class="row">
                 {% for category in categories %}
-                <div class="col-4 text-center mt-5 mx-auto  divcatresto">
+                <div class="col-10 col-sm-10 col-md-10 col-lg-5 col-xl-5 text-center mt-5 mx-auto  divcatresto">
                     <div class="card pt-5 mb-3 bg-secondary catresto">
                         <h3 class="card-header titlecatresto sdw text-light">{{ category.nom }}</h3>
-                        <div class="card-body d-flex flex-column-reverse col-5 mx-auto">
-                            <a href="{{ url('categoryMenu',{id:category.id}) }}" class="card-link btn titlecatresto sdw rounded text-light">Choisir</a>
+                        <div class="card-body d-flex flex-column-reverse col-md-4 mx-auto">
+                            <a href="{{ url('categoryMenu',{id:category.id}) }}" class="card-link btn btn-block titlecatresto sdw rounded text-light">Choisir</a>
                         </div>
                     </div>
                 </div>
