--- a/templates/category_virtual/show.html.twig
+++ b/templates/category_virtual/show.html.twig
@@ -3,8 +3,11 @@
 {% block title %}CategoryVirtual{% endblock %}
 
 {% block body %}
-    <h1>CategoryVirtual</h1>
+    <div class="pt-2 mt-2">
+        <h2 class="pt-5 mt-5 text-center ">Vue categorie de VR</h2>
+    </div>
 
+<div class="pt-2">
     <table class="table">
         <tbody>
             <tr>
@@ -17,6 +20,7 @@
             </tr>
         </tbody>
     </table>
+</div> 
 
     <div class="pl-5">
         <div class="pb-2 w-75">
