--- a/templates/menu/show.html.twig
+++ b/templates/menu/show.html.twig
@@ -3,8 +3,11 @@
 {% block title %}Menu{% endblock %}
 
 {% block body %}
-    {# <h1>Menu</h1> #}
-<div class="padt">
+    <div class="pt-2 mt-2">
+        <h2 class="pt-5 mt-5 text-center ">Vue liste de menu</h2>
+    </div>
+
+<div class="pt-2">
     <table class="table">
         <tbody>
             <tr>
