--- a/templates/category_menu/index.html.twig
+++ b/templates/category_menu/index.html.twig
@@ -23,7 +23,7 @@
                 <td>{{ category_menu.nom }}</td>
                 <td>{{ category_menu.image }}</td>
                 <td>
-                    {# <a href="{{ path('category_menu_show', {'id': category_menu.id}) }}">show</a> #}
+                    <a href="{{ path('category_menu_show', {'id': category_menu.id}) }}" class="btn btn-primary text-white">Voir</a>
                     <a href="{{ path('category_menu_edit', {'id': category_menu.id}) }}" class="btn btn-primary text-white">Modifier</a>
                 </td>
             </tr>
