--- a/templates/category_menu/show.html.twig
+++ b/templates/category_menu/show.html.twig
@@ -3,8 +3,11 @@
 {% block title %}CategoryMenu{% endblock %}
 
 {% block body %}
-    <h1>CategoryMenu</h1>
+    <div class="pt-2 mt-2">
+        <h2 class="pt-5 mt-5 text-center ">Vue categorie de menu</h2>
+    </div>
 
+<div class="pt-2">
     <table class="table">
         <tbody>
             <tr>
@@ -21,10 +24,19 @@
             </tr>
         </tbody>
     </table>
+</div>
 
-    <a href="{{ path('category_menu_index') }}">back to list</a>
+<div class="pl-5">
+    <div class="pb-2 w-75">
+        <a href="{{ path('category_menu_edit', {'id': category_menu.id}) }}" class="btn btn-primary">Modifer</a>
+    </div>
+    <div>
+        {{ include('category_menu/_delete_form.html.twig') }}
+    </div>
+</div>
+<hr>
+<div class="p-3">
+    <a href="{{ path('category_menu_index') }}" class="btn btn-primary">Retour</a>
+</div>
 
-    <a href="{{ path('category_menu_edit', {'id': category_menu.id}) }}">edit</a>
-
-    {{ include('category_menu/_delete_form.html.twig') }}
 {% endblock %}
