--- a/templates/virtual/show.html.twig
+++ b/templates/virtual/show.html.twig
@@ -2,11 +2,13 @@
 
 {% block title %}Virtual{% endblock %}
 {% block body %}
-    {# <h1>Jeux VR</h1> #}
+    <div class="pt-2 mt-2">
+        <h2 class="pt-5 mt-5 text-center ">Jeu VR</h2>
+    </div>
 
-    <div class="container pt-5">
+    <div class="container pt-2">
         <div class="row">
-            <div class="col-12 text-center">
+            <div class="col-12">
                 <h3>{{ virtual.nom }}</h3>
             </div>
             <div class="col-12">
