--- a/templates/restaurant/vueAllCategoryMenu.html.twig
+++ b/templates/restaurant/vueAllCategoryMenu.html.twig
@@ -21,7 +21,7 @@
                 <div class="col-10 col-sm-10 col-md-10 col-lg-5 col-xl-5 text-center mt-5 mx-auto  divcatresto">
                     <div class="card pt-5 mb-3 bg-secondary catresto">
                         <h3 class="card-header titlecatresto sdw text-light">{{ category.nom }}</h3>
-                        <div class="card-body d-flex flex-column-reverse col-md-4 mx-auto">
+                        <div class="card-body d-flex flex-column-reverse col-6 mx-auto">
                             <a href="{{ url('categoryMenu',{id:category.id}) }}" class="card-link btn btn-block titlecatresto sdw rounded text-light">Choisir</a>
                         </div>
                     </div>
