--- a/templates/realitevirtuelle/vueVirtual.html.twig
+++ b/templates/realitevirtuelle/vueVirtual.html.twig
@@ -28,9 +28,12 @@
                     </div> 
                              
                 </div>
-                <div>
-                <a class="card-link btn titlecatvr sdw rounded text-light" href="{{ url('categoryVR',{id:jeu.category.id}) }}">Retour</a>    
+                <div class="row">
+                    <div class="p-5 col-3">
+                        <a class="text-white card-link btn titlecatvr sdw rounded" href="{{ url('categoryVR',{id:jeu.category.id}) }}">Retour</a>    
+                    </div>
                 </div>
+
 
 </main>
 
