--- a/templates/restaurant/vueAllCategoryMenu.html.twig
+++ b/templates/restaurant/vueAllCategoryMenu.html.twig
@@ -15,13 +15,13 @@
 
     <div class="body-resto text bg-primary  container-fluid">
         <div class="bg-primary py-5">
-            <h2 class="card-header titlecatresto sdw my-3 text-center text-white">Choisir une catégorie</h2>
+            <h2 class="card-header titlecatresto sdw my-3 text-center text-white">Notre carte</h2>
             <div class="row">
                 {% for category in categories %}
-                <div class="col-10 col-sm-10 col-md-10 col-lg-5 col-xl-5 text-center mt-5 mx-auto  divcatresto">
+                <div class="col-10 col-sm-10 col-md-10 col-lg-4 col-xl-4 text-center mt-5 mx-auto  divcatresto">
                     <div class="card pt-5 mb-3 bg-secondary bgImgResto" style="--bg:url(../{{ category.image }})">
                         <h3 class="card-header titlecatresto sdw text-light">{{ category.nom }}</h3>
-                        <div class="card-body d-flex flex-column-reverse col-6 mx-auto">
+                        <div class="card-body d-flex flex-column-reverse col-8 mx-auto">
                             <a href="{{ url('categoryMenu',{id:category.id}) }}" class="card-link btn btn-block titlecatresto sdw rounded text-light">Choisir</a>
                         </div>
                     </div>
