--- a/templates/restaurant/vueCategoryMenu.html.twig
+++ b/templates/restaurant/vueCategoryMenu.html.twig
@@ -21,7 +21,7 @@
                             <h3 class="card-header">{{ menu.nom }}</h3>
                             <div class="card-body">
                                 <h5 class="card-title"> {{ menu.category.nom }}</h5>
-                                <img src="{{ asset(menu.image) }}" alt="{{ menu.category.nom }}" width="100%" class="img-fluid rounded">
+                                <img src="{{ asset(menu.image) }}" alt="{{ menu.category.nom }}" width="250" class="img-fluid rounded">
                             </div>
                         </div>
                     </div>
