--- a/templates/restaurant/restaurant.html.twig
+++ b/templates/restaurant/restaurant.html.twig
@@ -9,7 +9,7 @@
             <div class=" mx-auto w-100 bg-title-laser text-center">
                 <h1 class="lasertitle text-white p-3">Jungle Bar</h1>
                 <h3 class="lasersubtitle text-danger"></h3>
-                <p class="lasersubtitle h3 text-white p-3 font-weight-light">Gratuit seulement pour Laeti, Nagib, Younes et Eddy</p>
+                <p class="lasersubtitle h3 text-white p-3 font-weight-light">Detendez-vous dans une ambiance conviviale et familiale</p>
             </div>
         </div>
 
@@ -25,21 +25,11 @@
                             <div class="col-sm-10 col-md-10 col-lg-6 col-xl-7 mx-auto">                            
                                 <h4 class="card-title text-center pb-sm-1 pb-md-1 pt-sm-2 pt-md-2">Bienvenue au Jungle Bar</h4>
                                 <hr>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                    eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                                    ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                                    <br>
-                                    <br>
-                                    Duis aute irure dolor in reprehenderit in
-                                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                                    <br>
-                                    <br>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                    eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                                    ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                                <p class="card-text">Dans une ambiance conviviale et familiale, vous découvrirez notre carte vous proposant des plats maison.
+                                <br>
+                                Vous pourrez déguster nos menus burgers ou nos salades accompagnées de ses frites maisons. Toutes nos boissons viennent directement de petit producteur local. 
+                                <br>
+                                Lors de soirées en groupe profitez d'une soirée conviviale autour de nos tapas. 
                                 </p>
                             </div>
                         </article>
