--- a/templates/restaurant/vueCategoryMenu.html.twig
+++ b/templates/restaurant/vueCategoryMenu.html.twig
@@ -10,8 +10,7 @@
                 <div class="card mb-3 {% if loop.first %} bg-secondary{% endif %}">
                     <h3 class="card-header">{{ menu.nom }}</h3>
                     <div class="card-body">
-                        <h5 class="card-title"> {{ menu.category.nom }}</h5>
-                        <img src="{{ asset(menu.image) }}" alt="{{ menu.category.nom }}" width="100%">
+                        <img src="{{ asset(menu.image) }}" alt="{{ menu.nom }}" width="100">
                     </div>
                     <div class="card-body">
                         <p> {{menu.description}}</p>
