--- a/templates/home/homepage.html.twig
+++ b/templates/home/homepage.html.twig
@@ -16,25 +16,25 @@
                         <li data-target="#carouselCaptions" data-slide-to="1"></li>
                         <li data-target="#carouselCaptions" data-slide-to="2"></li>
                     </ol>
-                    <div class="carousel-inner" role="listbox">
+                    <div class="carousel-inner sdw" role="listbox">
                         <div class="carousel-item active">
-                            <img href="" src="./img/bar.png" class="d-block w-100" alt="bet asset screenshot">
+                            <img href="" src="./img/logoTheComplexe.jpg" class="d-block w-100" alt="bet asset screenshot">
                                 <div class="carousel-caption">
                                 <!-- Button trigger modal -->
                                 <a data-toggle="modal" data-target="#betassetModal">
-                                    <h3 class="text-white">RESTAURANT</h3>
-                                    <p class="text-white">Bar à biére<i class="fas fa-search text-success"></i></p>
+                                    <h3 class="text-white">Restaurant</h3>
+                                    <p class="text-white">Bar à bière</p>
                                </a>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="./img/Virtual_Reality.jpg" class="d-block w-100"
+                            <img src="./img/city.jpg" class="d-block w-100"
                                 alt="this website screenshot">
                             <div class="carousel-caption"> 
                                 <!-- Button trigger modal -->
                                  <a data-toggle="modal" data-target="#portfolioModal">
-                                    <h3 class="text-white">Laser-Game</h3> 
-                                    <p class="text-white">En famille ou entre amis<i class="fas fa-search text-success"></i></p> 
+                                    <h3 class="text-white">Laser Game</h3> 
+                                    <p class="text-white">En famille ou entre amis</p> 
                                 </a>
                             </div>
                         </div>
@@ -43,8 +43,8 @@
                             <div class="carousel-caption"> 
                                 <!-- Button trigger modal -->
                                 <a data-toggle="modal" data-target="#personalModal">
-                                    <h3 class="text-white">réalité virtuel</h3> 
-                                   <p class="text-white">Vivez des nouvelles expèriences<i class="fas fa-search text-success"></i></p> 
+                                    <h3 class="text-white">Réalité Virtuelle</h3> 
+                                   <p class="text-white">Vivez des nouvelles expériences</p> 
                                  </a>
                             </div>
                         </div>
@@ -68,10 +68,10 @@
             <article id="about" class="container m-auto pb-1 pt-1 mt-2 mb-2">
                 <h2 class="text-center pt-2 pb-2 mt-2 mb-2 text-light"> Le complexe !!</h2>
                 <p class="text-center text-light">
-                Dans un petit village tout prés d'Aix en Provence, l'équipe du Complexe vous accueil dans un local de plus de 400 m² ou vous pourrez vous divertir a travers différentes activité.
+                Dans un petit village tout près d'Aix en Provence, l'équipe du Complexe vous accueille dans un local de plus de 800 m² où vous pourrez vous divertir à travers différentes activités.
 
 
-Pour les petits et les grands de nombreuses animations vous attendent  tout au long de l'année. Vous pourrez découvrir, vivre de nouvelles expériences ou d'approfondir votre adresses dans de nouvelles tech.
+Pour les petits et les grands de nombreuses animations vous attendent tout au long de l'année. Vous pourrez découvrir, vivre de nouvelles expériences ou approfondir vôtre adresse dans de nouvelles tech.
 
 
                 </p>
@@ -81,11 +81,11 @@ Pour les petits et les grands de nombreuses animations vous attendent  tout au l
                 <p class="text-center text-light">
                 Notre équipe vous accueille du mardi au samedi pour vous divertir dans la joie et la bonne humeur.
 
-Nous vous proposons de manger nos différents burgers, nos tapas afin de profiter de bon moment entre amis et nos desserts qui viendrons clôturer ce bon repas.
+Nous vous proposons de manger nos différents burgers, nos tapas afin de profiter de bons moments entre amis et nos desserts qui viendront clôturer ce bon repas.
 
-Dans une ambiance, Western venez vous affronter dans une partie de Laser Game entre amis ou en famille.Nous vous proposons de manger nos différents burgers, nos tapas afin de profiter de bon moment entre amis et nos desserts qui viendrons clôturer ce bon repas.
+Dans une ambiance Western, venez vous affronter dans une partie de Laser Game entre amis ou en famille.
 
-Pour les anniversaires, pour des événements familiaux, pour des entreprises qui souhaitent créer un lien entre ces collaborateurs Grace à un casque virtuel, vous pourrez rentrer dans un monde virtuel ou il vous faudra résoudre des énigmes, faire des épreuves tous en restant dans une pièces vous pourrez jouer également seul ou à plusieurs.
+Pour les anniversaires, pour des événements familiaux ou pour des entreprises qui souhaitent créer un lien entre ses collaborateurs grâce à nos casques, vous pourrez entrer dans un monde virtuel où il vous faudra résoudre des énigmes, faire des épreuves tout en restant dans une pièce et jouer également seul ou à plusieurs.
 
 
                 </p>
