--- a/templates/restaurant/vueCategoryMenu.html.twig
+++ b/templates/restaurant/vueCategoryMenu.html.twig
@@ -8,7 +8,7 @@
         <div class=" mx-auto w-100 bg-title-laser text-center">
             <h1 class="mt-5 display-4 text-white p-3">Jungle Bar</h1>
             <h3 class="lasersubtitle text-danger"></h3>
-            <p class="lasersubtitle h3 text-white p-3 font-weight-light">Gratuit seulement pour Laeti, Nagib, Younes et Eddy</p>
+            <p class="lasersubtitle h3 text-white p-3 font-weight-light">Détendez-vous dans une ambiance conviviale et familiale</p>
         </div>
     </div>
 
@@ -21,7 +21,7 @@
                             <h3 class="card-header">{{ menu.nom }}</h3>
                             <div class="card-body">
                                 <h5 class="card-title"> {{ menu.description }}</h5>
-                                <img src="{{ asset(menu.image) }}" alt="{{ menu.category.nom }}" width="250" class="img-fluid rounded">
+                                <img src="{{ asset(menu.image) }}" alt="{{ menu.category.nom }}" style="height:270px;" class="img-fluid rounded">
                             </div>
                         </div>
                     </div>
