--- a/templates/lasergame/vueCategoryTarif.html.twig
+++ b/templates/lasergame/vueCategoryTarif.html.twig
@@ -25,7 +25,7 @@
                             <h3 class="card-header">{{ tarif.nom }}</h3>
                             <div class="card-body">
                                 <p class="font-italic"> {{tarif.description}} </p>
-                                <p class="h5 card-title">{{ tarif.prix1 }} / Personne</p>
+                                <p class="h5 card-title">{{ tarif.prix1 }}</p>
                             </div>
                         </div>
                     </div>
