--- a/templates/realitevirtuelle/vueVirtual.html.twig
+++ b/templates/realitevirtuelle/vueVirtual.html.twig
@@ -1,7 +1,7 @@
 {% extends 'realitevirtuelle/base.html.twig' %}
 
 
-{% block title %}{{ jeu.nom }} - VR{% endblock %}
+{% block title %}{{ jeu.nom }}Jeux - VR{% endblock %}
 
 {% block body %}
 <main class="bg-primary vrpage">
